[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "slapi"
version = "0.0.1"
description = "Basic wrapper for Starlink API"
authors = ["Daniel Collins <daniel.collins@spacex.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.31.0"
geopy = "^2.3.0"
configparser = "^5.3.0"
